feat: add image descriptions, subjects input, modify medium

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -55,7 +55,7 @@
         </div>
       </div>
     </nav>
-    <div style="position: absolute; top: 80px; right: 150px">
+    <div style="position: absolute; top: 80px; right: 150px; z-index: 1">
     {{> messages}}
     </div>
     {{{body}}}
