--- a/views/admin/edit_artwork.hbs
+++ b/views/admin/edit_artwork.hbs
@@ -7,16 +7,20 @@
     <div class="card-body row d-flex justify-content-between">
       {{#if artwork}}
       <form class="needs-validation" id="artwork_form" action="/admin/artworks/{{artwork.id}}?_method=PUT"
-        method="post" novalidate>
+        method="post" enctype="multipart/form-data" novalidate>
       {{else}}
-      <form class="needs-validation" id="artwork_form" action="/admin/artworks" method="post" novalidate>
+      <form class="needs-validation" id="artwork_form" action="/admin/artworks" method="post" enctype="multipart/form-data" novalidate>
       {{/if}}
           <div class="row">
             <label for="serialNumber" class="col-sm-2 col-form-label" align="center">品號
+              <span class="requiredInput">*</span>
               <small class="text-muted d-block">8碼</small>
             </label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="serialNumber" name="serialNumber" value="{{artwork.serialNumber}}" maxlength="8">
+              <input type="text" class="form-control" id="serialNumber" name="serialNumber" value="{{artwork.serialNumber}}" maxlength="8" required>
+              <div class="invalid-feedback">
+                請輸入品號
+              </div>
             </div>
           </div>
           <div class="row">
@@ -32,7 +36,7 @@
             </div>
           </div>
 
-          <div class="mb-3 row">
+          <div class="row">
             <label for="artist" class="col-sm-2 col-form-label" align="center">作者
               <span class="requiredInput">*</span>
               <small class="text-muted d-block">請輸入或擇一藝術家</small>
@@ -68,22 +72,22 @@
             </div>
           </div>
 
-          <div class="mb-3 row">
+          <div class="row">
             <label for="medium" class="col-sm-2 col-form-label" align="center">作品媒材
               <span class="requiredInput">*</span>
               <small class="text-muted d-block">請輸入或擇一媒材</small>
             </label>
             <div class="col-sm-10">
-              <input class="form-control" list="medium_datalistOptions" id="medium" name="medium" placeholder="例：水墨絹本" value="{{artwork.Medium.name}}" required>
-              <datalist id="medium_datalistOptions">
+              <select class="selectpicker show-tick border rounded-start" name="MediumId" id="medium"
+                data-size="5" data-live-search="true" data-width="100%" required>
                 {{#each medium_selections}}
-                <option value="{{this.name}}">
+                <option value="{{this.id}}" {{#if ../artwork}}{{#ifEqual this.name ../artwork.Medium.name}}selected{{/ifEqual}}{{/if}}>{{this.name}}</option>
                 {{/each}}
-              </datalist>
+              </select>
             </div>
           </div>
 
-          <div class="mb-3 row">
+          <div class="row">
             <label for="height" class="col-sm-2 col-form-label" align="center">作品尺寸
               <span class="requiredInput">*</span>
               <small class="text-muted d-block">(cm)</small>
@@ -127,17 +131,48 @@
             </div>
           </div>
 
-          <div class="mb-3 row">
+          <div class="row">
             <label class="col-sm-2 col-form-label" for="image" align="center">作品圖示
               <small class="text-muted d-block">一次最多10張</small></label>
             </label>
             <div class="col-sm-10">
-              <input class="form-control form-control-sm" type="file" name="image" id="image_upload" multiple>
+              <div class="input-group">
+              <input class="form-control" type="file" name="image" id="image_upload" multiple>
+              <span class="input-group-text" id="image-type">Type</span>
+              <input type="text" class="form-control" id="type" name="type" value="Original">
+              
               <div class="invalid-feedback">請勿超過10張</div>
+              </div>
             </div> 
           </div>
 
-          
+          <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label" for="image" align="center">圖片說明
+              <small class="text-muted d-block">請隨圖片上傳</small></label>
+            </label>
+            <div class="col-sm-10">
+              <textarea class="form-control" id="description" name="description" maxlength="1000"
+                rows="2">{{artwork.introduction}}</textarea>
+            </div>
+          </div>
+
+          <div class="mb-3 row">
+            <label class="col-sm-2 col-form-label" for="subjectTags" align="center">主題標籤</label>
+            <div class="col-sm-10">
+              <div class="input-group">
+                <select class="selectpicker show-tick border rounded-start" name="SubjectTags_select" id="SubjectTags_select" data-size="5"
+                  data-live-search="true" data-width="50%" multiple>
+                  {{#each subject_selections}}
+                  <option value="{{this.id}}" {{#if ../artwork}}{{#ifInclude this.name ../artwork.SubjectTags}}selected{{/ifInclude}}{{/if}}>{{this.name}}</option>
+                  {{/each}}
+                </select>
+                
+                <span class="input-group-text" id="SubjectTags_text">已選</span>
+                <input type="text" class="form-control" id="SubjectTags" name="SubjectTags" value="{{artwork.SubjectTags_text}}"
+                  aria-describedby="SubjectTags_text" disabled>
+              </div>
+            </div>
+          </div>
       </form>
   
     </div>
