--- a/views/admin/edit_artwork.hbs
+++ b/views/admin/edit_artwork.hbs
@@ -152,7 +152,7 @@
             </label>
             <div class="col-sm-10">
               <textarea class="form-control" id="description" name="description" maxlength="1000"
-                rows="2">{{artwork.introduction}}</textarea>
+                rows="2"></textarea>
             </div>
           </div>
 
@@ -250,45 +250,47 @@
   const ArtworkImages = document.getElementById("ArtworkImages")
   const modalImg = document.getElementById("modalImg");
   const captionText = document.getElementById("caption");
-  ArtworkImages.addEventListener('click', (event) => {
-    console.log('clicked!', event.target)
-    let target = event.target
-    if (target.tagName === "IMG") {
-      modal.style.display = "block";
-      modalImg.src = target.src;
-      captionText.innerHTML = target.alt;
-    }
-
-    if (target.classList.contains("delete")) {
-      event.preventDefault()
-
-      function findForm(target) {
-        if (target.parentElement.tagName === "FORM") return target.parentElement
-        return findForm(target.parentElement)
+  if (ArtworkImages) {
+    ArtworkImages.addEventListener('click', (event) => {
+      console.log('clicked!', event.target)
+      let target = event.target
+      if (target.tagName === "IMG") {
+        modal.style.display = "block";
+        modalImg.src = target.src;
+        captionText.innerHTML = target.alt;
       }
-      let form = findForm(target)
 
-      Swal.fire({
-        title: 'Are you sure?',
-        text: `確定要刪除？`,
-        icon: 'warning',
-        showCancelButton: true,
-        confirmButtonColor: '#3085d6',
-        cancelButtonColor: '#d33',
-        confirmButtonText: '刪除！'
-      }).then((result) => {
-        if (result.isConfirmed) {
-          Swal.fire(
-            '已刪除!',
-            ``,
-            'success'
-          ).then(result => {
-            form.submit()
-          })
+      if (target.classList.contains("delete")) {
+        event.preventDefault()
+
+        function findForm(target) {
+          if (target.parentElement.tagName === "FORM") return target.parentElement
+          return findForm(target.parentElement)
         }
-      })
-    }
-  })
+        let form = findForm(target)
+
+        Swal.fire({
+          title: 'Are you sure?',
+          text: `確定要刪除？`,
+          icon: 'warning',
+          showCancelButton: true,
+          confirmButtonColor: '#3085d6',
+          cancelButtonColor: '#d33',
+          confirmButtonText: '刪除！'
+        }).then((result) => {
+          if (result.isConfirmed) {
+            Swal.fire(
+              '已刪除!',
+              ``,
+              'success'
+            ).then(result => {
+              form.submit()
+            })
+          }
+        })
+      }
+    })
+  }
 
   // close the modal
   modal.addEventListener('click', (event) => {
