feat: GET /collections

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -35,7 +35,7 @@
             </li>
             {{#unless user.isAdmin}}
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Collection</a>
+              <a class="nav-link" href="/collections">Collection</a>
             </li>
             {{/unless}}
             {{#if user}}
