--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -24,16 +24,37 @@
       </a>
 
       <div style="position: absolute; bottom: 110px; right: 5%" align="right" class="d-flex justify-content-end">
-        <button type="button" style="color:peru; max-width: 10px" class="btn btn-sm btn-link mx-2 d-block modal_btn" data-bs-toggle="modal" data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus modal_btn"></i></button>
+        <button type="button" style="color:peru; max-width: 15px" class="btn btn-sm btn-link mx-2 ps-0 modal_btn" data-bs-toggle="modal" data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus modal_btn"></i></button>
 
         <form id="favorite" action="/collections/favorite/{{this.id}}" method="post">
-          <button type="submit" form="favorite" style="color:peru" class="btn btn-sm btn-link mx-2"><i class="fa-regular fa-heart"></i></button>
+          <button type="submit" form="favorite" style="color:peru" class="btn btn-sm btn-link"><i class="fa-regular fa-heart"></i></button>
         </form>
       </div>
 
       <div class="card-body">
         <h6 class="card-title">{{this.name}}</h6>
         <small class="card-text d-inline-block">{{this.artistName}}　{{this.Medium.name}}　{{this.creationTime}}　{{this.size}}</small>
+      </div>
+    </div>
+
+    <div class="modal fade" id="editCollection_{{this.id}}" tabindex="-1">
+      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add to Collections</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" style="min-height: 200px" align="center">
+            <form id="edit_collection" action="/collections/{{this.id}}?_method=PUT" method="post">
+              <select class="form-select" name="collection_id" id="selectWork_{{this.id}}" data-size="5" data-width="50%" multiple required>
+              </select>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" form="edit_collection" class="btn btn-primary">Add</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
       </div>
     </div>
     {{/each}}
@@ -56,5 +77,43 @@
     $grid.masonry();
   });
 
+  // ajax get collections
+  const grid = document.querySelector('.grid')
+
+  function removeAllChild(node) {
+    while (node.firstElementChild) {
+      node.removeChild(node.firstElementChild)
+    }
+  }
+  grid.addEventListener('click', async (event) => {
+    let target = event.target
+    if (target.classList.contains('modal_btn')) {
+      let workId
+      if (target.tagName === 'I') {
+        workId = target.parentElement.getAttribute('data-bs-target').split('_')[1]
+      } else {
+        workId = target.getAttribute('data-bs-target').split('_')[1]
+      }
+
+      try {
+        let response = await axios.get('/api/collections')
+        let ownCollections = response.data
+        let modal_select = document.getElementById(`selectWork_${workId}`)
+        removeAllChild(modal_select)
+        
+        ownCollections.forEach(col => {
+          let option = document.createElement('option')
+          option.setAttribute('value', col.id)
+          if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
+            option.setAttribute('selected', "")
+          }
+          option.innerText = `${col.name} (${col.workCount} pieces)`
+          modal_select.appendChild(option)
+        })
+      } catch (error) {
+        console.log(error)
+      }
+    }
+  })
 
 </script>
