--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
     <script src="https://kit.fontawesome.com/5498749765.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
     {{!-- Navbar --}}
@@ -55,7 +56,7 @@
         </div>
       </div>
     </nav>
-    <div style="position: absolute; top: 80px; right: 150px; z-index: 1">
+    <div style="position: absolute; top: 80px; right: 200px; z-index: 1">
     {{> messages}}
     </div>
     {{{body}}}
