fix: getCollections display default image, add min-height

--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -261,7 +261,7 @@
     <div class="card grid-item grid-item-artwork-big">
       <a href="/artworks/{{this.id}}">
         <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}"
-          style="height: auto; max-height: 600px; object-fit: cover">
+          style="height: auto; min-height: 50px; max-height: 600px; object-fit: cover">
       </a>
       <span style="position: absolute; bottom: 110px; right: 5%" align="right">
         <a href="#" style="color:peru" class="mx-2"><i class="fa-solid fa-circle-plus"></i></a>
