--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -20,7 +20,7 @@
     <div class="card grid-item grid-item-artwork-big">
       <a href="/artworks/{{this.id}}">
         <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}"
-          style="height: auto; max-height: 600px; object-fit: cover">
+          style="height: auto; min-height: 50px; max-height: 600px; object-fit: cover">
       </a>
 
       <div style="position: absolute; bottom: 110px; right: 5%" align="right" class="d-flex justify-content-end">
