--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -1,13 +1,69 @@
 <div class="exhibition-banner mb-5">
   <div class="ms-5">
     <h2 class="banner-title">{{collection.name}}</h2>
-    <small class="banner-details ms-2">{{collection.description}}</small>
+    <small class="banner-details ms-2" style="margin-right: 25%">{{collection.description}}</small>
   </div>
 </div>
 
+{{!-- Show edit & delete btn if owned by user --}}
+{{#if collection.isOwner}}
+<div class="mb-3 d-flex justify-content-end" >
+  <div class="btn-group btn-group-sm banner-buttons" role="group" style="position: relative; top: -90px">
+    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
+      data-bs-target="#edit_collection_modal">Edit</button>
+    <form action="/collections/{{collection.id}}?_method=DELETE" method="post" id="deleteCollection"></form>
+    <button type="submit" form="deleteCollection" class="btn btn-outline-danger">Delete</button>
+  </div>
+</div>
+
+<div class="modal fade" id="edit_collection_modal" tabindex="-1" aria-labelledby="edit_collection_label"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="edit_collection_label">Edit Collection</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="/collections/{{collection.id}}?_method=PUT" method="post" id="editCollection">
+          <div class="form-check form-switch">
+            <div class="mb-3 row">
+              <label for="name" class="col-sm-3 col-form-label">New Name</label>
+              <div class="col-sm-9">
+                <input class="form-control" type="text" name="name" id="name" value="{{collection.name}}" maxlength="25" required>
+                <p><small class="text-muted">Max: 25 characters</small></p>
+              </div>
+            </div>
+            <div class="mb-3 row">
+              <label for="description" class="col-sm-3 col-form-label">Description</label>
+              <div class="col-sm-9">
+                <textarea class="form-control" name="description" id="description" rows="5" maxlength="100">{{collection.description}}</textarea>
+                <p><small class="text-muted">Max: 100 characters</small></p>
+              </div>
+            </div>
+
+            <div class="mb-3 d-flex justify-content-end">
+              <input class="form-check-input me-2" type="checkbox" role="switch" id="privacy" name="privacy" {{#if
+                collection.privacy}}checked{{/if}}>
+              <label class="form-check-label" for="privacy">Public</label>
+            </div>
+
+          </div>
+        </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" form="editCollection" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+{{/if}}
+
 <div class="container-fluid">
   <div class="d-flex justify-content-between">
-    <p>共{{collection.workCount}}件藝術品</p>
+    <p id="workCount">共{{collection.workCount}}件藝術品</p>
     <p><span> Created by </span>{{collection.User.name}}</p>
   </div>
 
@@ -33,7 +89,9 @@
 
       <div class="card-body">
         <h6 class="card-title">{{this.name}}</h6>
-        <small class="card-text d-inline-block">{{this.artistName}}　{{this.Medium.name}}　{{this.creationTime}}　{{this.size}}</small>
+        <small class="card-text d-inline-block">
+          {{this.artistName}}　{{this.Medium.name}}　{{this.creationTime}}　{{this.size}}
+        </small>
       </div>
     </div>
 
@@ -64,6 +122,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
 <script>
@@ -76,6 +135,38 @@
   $grid.imagesLoaded().progress(function () {  // trigger layout after loaded then initialize Masonry
     $grid.masonry();
   });
+
+  // delete collection alert
+  const delete_collection_form = document.querySelector('#deleteCollection')
+  if (delete_collection_form) {
+
+    delete_collection_form.addEventListener('submit', event => {
+      event.preventDefault()
+      const collection_name = document.querySelector('.banner-title').innerText
+      const work_count = document.getElementById('workCount').innerText
+
+      Swal.fire({
+        title: 'Are you sure?',
+        text: `確定要刪除 ${collection_name}，${work_count}？`,
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: '刪除！'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          Swal.fire(
+            '已刪除!',
+            `${collection_name}，${work_count}件作品`,
+            'success'
+          ).then(result => {
+            delete_collection_form.submit()
+          })
+        }
+      })
+    })
+  }
+
 
   // ajax get collections
   const grid = document.querySelector('.grid')
