--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -80,10 +80,12 @@
       </a>
 
       <div style="position: absolute; bottom: 110px; right: 5%" align="right" class="d-flex justify-content-end">
-        <button type="button" style="color:peru; max-width: 15px" class="btn btn-sm btn-link mx-2 ps-0 modal_btn" data-bs-toggle="modal" data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus modal_btn"></i></button>
+        <button type="button" style="color:peru; max-width: 15px" class="btn btn-sm btn-link mx-2 ps-0 modal_btn"
+          data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus modal_btn"></i></button>
 
         <form id="favorite" action="/collections/favorite/{{this.id}}" method="post">
-          <button type="submit" form="favorite" style="color:peru" class="btn btn-sm btn-link"><i class="fa-regular fa-heart"></i></button>
+          <button type="submit" form="favorite" style="color:peru" class="btn btn-sm btn-link favorite_btn"><i
+              class="fa-regular fa-heart favorite_btn"></i></button>
         </form>
       </div>
 
@@ -103,19 +105,35 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" style="min-height: 200px" align="center">
-            <form id="edit_collection" action="/collections/{{this.id}}?_method=PUT" method="post">
-              <select class="form-select" name="collection_id" id="selectWork_{{this.id}}" data-size="5" data-width="50%" multiple required>
+            <form id="edit_collection_{{this.id}}" action="/collections/artworks/{{this.id}}?_method=PUT" method="post">
+              <select class="form-select mb-3" name="collectionId_select" id="selectWork_{{this.id}}" size="8" multiple>
               </select>
+              <p class="text-muted">Press ctrl to add or remove multiple collections.</p>
             </form>
           </div>
           <div class="modal-footer">
-            <button type="submit" form="edit_collection" class="btn btn-primary">Add</button>
+            <button type="submit" form="edit_collection_{{this.id}}" class="btn btn-primary">Save</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
     {{/each}}
+  </div>
+</div>
+
+<div class="modal" id="login_alert" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Please login first.</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-footer">
+        <a href="/user/signup"><button type="button" class="btn btn-success">Sign up</button></a>
+        <a href="/user/login"><button type="button" class="btn btn-primary">Login </button></a>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -178,6 +196,28 @@
   }
   grid.addEventListener('click', async (event) => {
     let target = event.target
+
+    // add favorites button: check logout before submit
+    if (target.classList.contains('favorite_btn')) {
+      event.stopPropagation()
+      event.preventDefault()
+      let ifLogout = document.querySelector('.fa-circle-user')
+      if (ifLogout) {
+        const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
+        login_alert.show()
+      } else {
+        let form
+        if (target.tagName === 'I') {
+          form = target.parentElement.parentElement
+        } else {
+          form = target.parentElement
+        }
+        form.submit()
+      }
+    }
+
+    // add collection button: 
+    // 1. check logout before submit; 2. axios get collection 
     if (target.classList.contains('modal_btn')) {
       let workId
       if (target.tagName === 'I') {
@@ -186,23 +226,31 @@
         workId = target.getAttribute('data-bs-target').split('_')[1]
       }
 
-      try {
-        let response = await axios.get('/api/collections')
-        let ownCollections = response.data
-        let modal_select = document.getElementById(`selectWork_${workId}`)
-        removeAllChild(modal_select)
-        
-        ownCollections.forEach(col => {
-          let option = document.createElement('option')
-          option.setAttribute('value', col.id)
-          if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
-            option.setAttribute('selected', "")
-          }
-          option.innerText = `${col.name} (${col.workCount} pieces)`
-          modal_select.appendChild(option)
-        })
-      } catch (error) {
-        console.log(error)
+      let ifLogout = document.querySelector('.fa-circle-user')
+      if (ifLogout) {
+        const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
+        login_alert.show()
+      } else {
+        let modalCalled = new bootstrap.Modal(document.getElementById(`editCollection_${workId}`))
+        modalCalled.show()
+        try {
+          let response = await axios.get('/api/collections')
+          let ownCollections = response.data
+          let modal_select = document.getElementById(`selectWork_${workId}`)
+          removeAllChild(modal_select)
+
+          ownCollections.forEach(col => {
+            let option = document.createElement('option')
+            option.setAttribute('value', col.id)
+            if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
+              option.setAttribute('selected', "")
+            }
+            option.innerText = `${col.name} (${col.workCount} pieces)`
+            modal_select.appendChild(option)
+          })
+        } catch (error) {
+          console.log(error)
+        }
       }
     }
   })
