feat: POST /collections/favorite/:artworkId, adjust button UI

--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -79,13 +79,13 @@
           style="height: auto; min-height: 50px; max-height: 600px; object-fit: cover">
       </a>
 
-      <div style="position: absolute; bottom: 110px; right: 5%" align="right" class="d-flex justify-content-end">
-        <button type="button" style="color:peru; max-width: 15px" class="btn btn-sm btn-link mx-2 ps-0 modal_btn"
-          data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus modal_btn"></i></button>
-
+      <div style="position: absolute; bottom: 110px; right: 5%;" align="right" class="d-flex justify-content-end button-area">
+        <button type="button" class="btn btn-sm btn-link addCollection_btn"
+          data-bs-target="#editCollection_{{this.id}}"><i class="fa-solid fa-circle-plus addCollection_btn"></i></button>
         <form id="favorite" action="/collections/favorite/{{this.id}}" method="post">
-          <button type="submit" form="favorite" style="color:peru" class="btn btn-sm btn-link favorite_btn"><i
-              class="fa-regular fa-heart favorite_btn"></i></button>
+          <button type="submit" form="favorite" class="btn btn-sm btn-link favorite_btn">
+            <i class="fa-regular fa-heart favorite_btn"></i>
+          </button>
         </form>
       </div>
 
