--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,23 @@ a:link, a:visited {
   text-decoration: none;
 }
 
+/* artworks add collection and favorite buttons */
+i.favorite_btn, i.addCollection_btn {
+  text-shadow: 1px 1px 2px rgba(105, 68, 68, 0.6);
+}
+
+button.favorite_btn, button.addCollection_btn {
+  color: #f72c2ce1;
+  opacity: 0.6;
+  transition: transform .2s;
+}
+
+button.favorite_btn:hover, button.addCollection_btn:hover {
+  color: #f72c2ce1;
+  opacity: 1;
+  transform: scale(1.2);
+}
+
 .artist-thumbnail {
   border-radius: 50%;
   position: relative;
