--- a/views/exhibition_artworks.hbs
+++ b/views/exhibition_artworks.hbs
@@ -38,9 +38,11 @@
             </span>
 
             
-            <div class="card-body">
-              <h5 class="card-title">{{this.name}}</h5>
-              <p class="card-text">{{this.artistName}}｜{{this.medium}}｜{{this.size}}</p>
+          <div class="card-body">
+            <h6 class="card-title" style="height: 2em;"><strong>{{this.name}}</strong></h6>
+            <p class="card-text mb-3" style="height: 2em;">
+              {{this.artistName}}　{{this.medium}}　{{this.creationTime}}　{{this.size}}&nbsp;cm
+            </p>
             </div>
           </div>
         </div>
