--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -79,7 +79,7 @@
           style="height: auto; min-height: 50px; max-height: 600px; object-fit: cover">
       </a>
 
-      <div style="position: absolute; bottom: 110px; right: 5%;" align="right" class="d-flex justify-content-end button-area">
+      <div style="position: absolute; bottom: 120px; right: 5%;" align="right" class="d-flex justify-content-end button-area">
         <button type="button" class="btn btn-sm btn-link modal_btn addCollection_btn"
           data-bs-target="#editCollection_{{this.id}}">
         {{#if this.isAdded}}
@@ -105,9 +105,9 @@
       </div>
 
       <div class="card-body">
-        <h6 class="card-title">{{this.name}}</h6>
-        <small class="card-text d-inline-block">
-          {{this.artistName}}　{{this.Medium.name}}　{{this.creationTime}}　{{this.size}}
+        <h6 class="card-title" style="height: 2em">{{this.name}}</h6>
+        <small class="card-text" style="height: 2em">
+          {{this.artistName}}　{{this.Medium.name}}　{{this.creationTime}}　{{this.size}}&nbsp;cm
         </small>
       </div>
     </div>
