--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -61,6 +61,23 @@
     </div>
     {{{body}}}
 
+    <!-- Login Alert -->
+    <div class="modal" id="login_alert" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Please login first.</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-footer">
+            <a href="/user/signup"><button type="button" class="btn btn-success">Sign up</button></a>
+            <a href="/user/login"><button type="button" class="btn btn-primary">Login </button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
