--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -256,10 +256,30 @@
         <img src="{{this.image}}" class="card-img-top" alt="{{this.name}}"
           style="height: auto; min-height: 50px; max-height: 600px; object-fit: cover">
       </a>
-      <span style="position: absolute; bottom: 110px; right: 5%" align="right">
-        <a href="#" style="color:peru" class="mx-2"><i class="fa-solid fa-circle-plus"></i></a>
-        <a href="#" style="color:tomato"><i class="fa-regular fa-heart"></i></a>
-      </span>
+      <div style="position: absolute; bottom: 120px; right: 5%;" align="right" class="d-flex justify-content-end button-area">
+        <button type="button" class="btn btn-sm btn-link modal_btn addCollection_btn"
+          data-bs-target="#editCollection_{{this.id}}">
+          {{#if this.isAdded}}
+          <i class="fa-solid fa-circle-plus modal_btn addCollection_btn "></i>
+          {{else}}
+          <i class="fa-solid fa-plus modal_btn addCollection_btn"></i>
+          {{/if}}
+        </button>
+      
+        {{#if this.isFavorite}}
+        <form id="favorite" action="/collections/favorite/{{this.id}}?_method=DELETE" method="post">
+          <button type="submit" form="favorite" class="btn btn-sm btn-link favorite_btn">
+            <i class="fa-solid fa-heart favorite_btn"></i>
+          </button>
+        </form>
+        {{else}}
+        <form id="favorite" action="/collections/favorite/{{this.id}}" method="post">
+          <button type="submit" form="favorite" class="btn btn-sm btn-link favorite_btn">
+            <i class="fa-regular fa-heart favorite_btn"></i>
+          </button>
+        </form>
+        {{/if}}
+      </div>
 
       <div class="card-body">
         <h6 class="card-title" style="height: 2em;">{{this.name}}</h6>
@@ -268,10 +288,33 @@
         </small>
       </div>
     </div>
+
+    <div class="modal fade" id="editCollection_{{this.id}}" tabindex="-1">
+      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add to Collections</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" style="min-height: 200px" align="center">
+            <form id="edit_collection_{{this.id}}" action="/collections/artworks/{{this.id}}?_method=PUT" method="post">
+              <select class="form-select mb-3" name="collectionId_select" id="selectWork_{{this.id}}" size="8" multiple>
+              </select>
+              <p class="text-muted">Press ctrl to add or remove multiple collections.</p>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" form="edit_collection_{{this.id}}" class="btn btn-primary">Save</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     {{/each}}
   </div>
 
 </div>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
@@ -288,5 +331,67 @@
   $grid.imagesLoaded().progress(function () {  // trigger layout after loaded then initialize Masonry
     $grid.masonry();
   });
+
+  // ajax get collections
+  const grid = document.querySelector('.grid')
+
+  function removeAllChild(node) {
+    while (node.firstElementChild) {
+      node.removeChild(node.firstElementChild)
+    }
+  }
+  grid.addEventListener('click', async (event) => {
+    // check logout before submit add collection / favorite
+    const ifLogout = document.querySelector('.fa-circle-user')
+    const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
+    if (ifLogout) login_alert.show() 
+    let target = event.target
+
+    // add favorites button
+    if (target.classList.contains('favorite_btn')) {
+      event.stopPropagation()
+      event.preventDefault()
+      if (!ifLogout) {
+        let form
+        if (target.tagName === 'I') {
+          form = target.parentElement.parentElement
+        } else {
+          form = target.parentElement
+        }
+        form.submit()
+      }
+    }
+
+    // add collection button: 
+    if (target.classList.contains('modal_btn') && !ifLogout) {
+      let workId
+      if (target.tagName === 'I') {
+        workId = target.parentElement.getAttribute('data-bs-target').split('_')[1]
+      } else {
+        workId = target.getAttribute('data-bs-target').split('_')[1]
+      }
+      
+      const modalCalled = new bootstrap.Modal(document.getElementById(`editCollection_${workId}`))
+      modalCalled.show()
+      try {
+        let response = await axios.get('/api/collections')
+        let ownCollections = response.data
+        let modal_select = document.getElementById(`selectWork_${workId}`)
+        removeAllChild(modal_select)
+
+        ownCollections.forEach(col => {
+          let option = document.createElement('option')
+          option.setAttribute('value', col.id)
+          if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
+            option.setAttribute('selected', "")
+          }
+          option.innerText = `${col.name} (${col.workCount} pieces)`
+          modal_select.appendChild(option)
+        })
+      } catch (error) {
+        console.log(error)
+      }
+    }
+  })
 
 </script>
