--- a/views/artwork_landscape.hbs
+++ b/views/artwork_landscape.hbs
@@ -1,14 +1,15 @@
-<div class="container-fluid">
+<div class="container-fluid mt-5">
 
-  <div class="card border-white mb-5 mx-auto" style="max-width: 1200px;">
+  <div class="card border-white mb-5 mx-auto" style="max-width: 880px;">
     <img class="card-img-top mx-auto mt-5" id="myImg" src="{{artwork.image}}"
-      alt="{{artwork.artistName}}  {{artwork.name}}" style="width:100%; max-width:540px">
+      alt="{{artwork.artistName}}  {{artwork.name}}" style="max-width: 540px; max-height: 540px; object-fit: contain">
 
     <div class="card-body text-center">
       <h5 class="card-title ">{{artwork.name}}</h5>
       <h5 class="card-title mb-3">{{artwork.artistName}}</h5>
       <div class="card-details">
-        <h5 class="card-title">創作年代：{{artwork.creationTime}} {{artwork.creationTimeNote}}</h5>
+        {{#if artwork.creationTime}}<h5 class="card-title">創作年代：{{artwork.creationTime}} {{artwork.creationTimeNote}}</h5>
+        {{/if}}
         <h5 class="card-title">作品尺寸：{{artwork.size}}</h5>
         <h5 class="card-title">作品媒材：{{artwork.Medium.name}}
           <a href="/artworks/search?medium={{artwork.Medium.name}}">
@@ -19,7 +20,7 @@
         </h5>
       </div>
 
-      <p class="mt-5 card-text">{{artwork.introduction}}</p>
+      <p class="mt-5 mx-auto card-text" style="max-width: 760px;">{{artwork.introduction}}</p>
       <p class="card-text">標籤：
         {{#each artwork.SubjectTags}}
         <a class="btn btn-outline-secondary btn-sm" id="artwork-tag"
@@ -55,25 +56,27 @@
     </div>
   </div>
 
-  <div class="container mx-30">
+  <div class="container">
     <h4 class="mb-3"><i class="fa-solid fa-diamond fa-xs"></i> 藝術家</h4>
     <hr>
-    <div class="scrolling-wrapper mb-5">
+    <div class="row mb-5">
       {{#each artwork.Creators}}
-      <div class="card border-white mb-3 col-8 col-sm-6 col-lg-4 mx-3 ">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
-              style="max-width: 200px;">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><a href="/artists/{{this.id}}">{{this.name}}</a></h5>
-              <p class="card-text">{{this.introduction}}</p>
+        <div class="card border-white mb-3 col-12 col-lg-6">
+          <div class="row">
+            <div class="col-12 col-sm-3 col-lg-4 d-flex justify-content-center">
+              <a href="/artists/{{this.id}}">
+                <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
+                style="max-width: 150px;">
+              </a>
+            </div>
+            <div class="col-12 col-sm-9 col-lg-8 align-self-center">
+              <div class="card-body">
+                <h5 class="card-title"><a href="/artists/{{this.id}}">{{this.name}}</a></h5>
+                <p class="card-text">{{this.introduction}}</p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
       {{/each}}
     </div>
   </div>
@@ -119,19 +122,20 @@
   const img = document.getElementById("myImg");
   const modalImg = document.getElementById("img01");
   const captionText = document.getElementById("caption");
-  img.onclick = function () {
+  img.addEventListener('click', (event) => {
+    let target = event.target
     modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  }
-
-  // Get the <span> element that closes the modal
-  const span = document.getElementsByClassName("close")[0];
+    modalImg.src = target.src;
+    captionText.innerHTML = target.alt;
+  })
 
   // close the modal
-  span.onclick = function () {
-    modal.style.display = "none";
-  }
+  modal.addEventListener('click', (event) => {
+    let target = event.target
+    if (target.id === "myModal" || target.tagName === 'SPAN') {
+      modal.style.display = "none";
+    }
+  })  
 
   // ajax get collections
   const button_area = document.querySelector('.button-area')
