--- a/views/artwork_portrait.hbs
+++ b/views/artwork_portrait.hbs
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid mt-5">
 
   <div class="card border-white mb-5 mx-auto" style="max-width: 1200px;">
     <div class="row g-0">
       <div class="col-md-4">
         <img class="card-img-top mx-auto mt-5" id="myImg" src="{{artwork.image}}"
-          alt="{{artwork.artistName}}  {{artwork.name}}" style="width: auto; max-height:720px">
+          alt="{{artwork.artistName}}  {{artwork.name}}" style="max-width: 540px; max-height: 600px; object-fit: contain">
       </div>
 
       <div class="col-md-8 d-flex align-items-end">
@@ -12,7 +12,7 @@
           <h5 class="card-title ">{{artwork.name}}</h5>
           <h5 class="card-title mb-3">{{artwork.artistName}}</h5>
           <div class="card-details">
-            <h5 class="card-title">創作年代：{{artwork.creationTime}} {{artwork.creationTimeNote}}</h5>
+            {{#if artwork.creationTime}}<h5 class="card-title">創作年代：{{artwork.creationTime}} {{artwork.creationTimeNote}}</h5>{{/if}}
             <h5 class="card-title">作品尺寸：{{artwork.size}}</h5>
             <h5 class="card-title">作品媒材：{{artwork.Medium.name}}
               <a href="/artworks/search?medium={{artwork.Medium.name}}">
@@ -23,7 +23,7 @@
             </h5>
           </div>
 
-          <p class="mt-5 card-text">{{artwork.introduction}}</p>
+          <p class="mt-5 card-text" style="max-width: 760px;">{{artwork.introduction}}</p>
           <p class="card-text">標籤：
             {{#each artwork.SubjectTags}}
             <a class="btn btn-outline-secondary btn-sm" id="artwork-tag"
@@ -61,18 +61,20 @@
     </div>
   </div>
 
-  <div class="container mx-30">
+  <div class="container">
     <h4 class="mb-3"><i class="fa-solid fa-diamond fa-xs"></i> 藝術家</h4>
     <hr>
-    <div class="scrolling-wrapper mb-5">
+    <div class="row mb-5">
       {{#each artwork.Creators}}
-      <div class="card border-white mb-3 col-8 col-sm-6 col-lg-4 mx-3 ">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
-              style="max-width: 200px;">
+      <div class="card border-white mb-3 col-12 col-lg-6">
+        <div class="row">
+          <div class="col-12 col-sm-3 col-lg-4 d-flex justify-content-center">
+            <a href="/artists/{{this.id}}">
+              <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
+              style="max-width: 150px; height:auto;" title="More about Artist">
+            </a>
           </div>
-          <div class="col-md-8">
+          <div class="col-12 col-sm-9 col-lg-8 align-self-center"  >
             <div class="card-body">
               <h5 class="card-title"><a href="/artists/{{this.id}}">{{this.name}}</a></h5>
               <p class="card-text">{{this.introduction}}</p>
@@ -113,7 +115,7 @@
     <img class="modal-content" id="img01">
     <div id="caption"></div>
   </div>
-
+</div>
 
 
 <script>
@@ -124,19 +126,20 @@
   const img = document.getElementById("myImg");
   const modalImg = document.getElementById("img01");
   const captionText = document.getElementById("caption");
-  img.onclick = function () {
+  img.addEventListener('click', (event) => {
+    let target = event.target
     modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  }
-
-  // Get the <span> element that closes the modal
-  const span = document.getElementsByClassName("close")[0];
+    modalImg.src = target.src;
+    captionText.innerHTML = target.alt;
+  })
 
   // close the modal
-  span.onclick = function () {
-    modal.style.display = "none";
-  }
+  modal.addEventListener('click', (event) => {
+    let target = event.target
+    if (target.id === "myModal" || target.tagName === 'SPAN') {
+      modal.style.display = "none";
+    }
+  })
 
   // ajax get collections
   const button_area = document.querySelector('.button-area')
