feat: add more info to exhibition

--- a/views/exhibition_info.hbs
+++ b/views/exhibition_info.hbs
@@ -26,6 +26,11 @@
       </div>
       <div class="card-body col-12 col-lg-7">
         <p style="line-height: 200%; max-width: 800px">{{exhibition.introduction}}</p>
+        <ul>
+          <li class="my-2"><strong>開始日期</strong> {{exhibition.date_start}}</li>
+          <li class="mb-2"><strong>結束日期</strong> {{exhibition.date_end}}</li>
+          <li class="mb-2"><strong>展覽地點</strong> {{exhibition.location}}</li>
+        </ul>
       </div>
     </div>
   </div>
